# shader-tater

./: README.md  shader-tot.cabal  stack.yaml
src/: ShaderTot.hs
src/ShaderTot/: Common.hs  Simple2D.hs  SimpleShaderPaths.hs  TypeLevel.hs
