name:                shader-tot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/schell/shader-tot#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
copyright:           Schell Scivally
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          shaders/*.frag,
                     shaders/*.vert

library
  hs-source-dirs:      src
  exposed-modules:     ShaderTot.Common
                     , ShaderTot.Simple2D
                     , ShaderTot.TypeLevel
                     , ShaderTot.SimpleShaderPaths
                     , ShaderTot
  other-modules:       Paths_shader_tot
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , filepath
                     , linear
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/shader-tot
